@@ -17,11 +17,11 @@ import org.ujorm.MyTestCase;
  * @author Pavel Ponec
  */
 public class PojoTest extends MyTestCase {
-    
+
     public PojoTest(String testName) {
         super(testName);
     }
-    
+
     public static TestSuite suite() {
         TestSuite suite = new TestSuite(PojoTest.class);
         return suite;
@@ -30,25 +30,25 @@ public class PojoTest extends MyTestCase {
     @Override
     protected void setUp() throws Exception {
     }
-    
+
     @Override
     protected void tearDown() throws Exception {
     }
-    
+
     /**
      * Test of readValue method, of class org.ujorm.hmapImlp.AUnifiedDataObject.
      */
     public void testReadWrite() throws Throwable {
         System.out.println("testReadWrite");
-        
-        Long    o0 = new Long(Long.MAX_VALUE);
-        Integer o1 = new Integer(1);
+
+        Long    o0 = Long.valueOf(Long.MAX_VALUE);
+        Integer o1 = Integer.valueOf(1);
         String  o2 ="TEST";
         Date    o3 = new Date();
         Float   o4 = new Float(123456.456);
-        
+
         PojoImpl ujb = new PojoImpl();
-        
+
         ujb.setP0(o0);
         ujb.setP1(o1);
         ujb.setP2(o2);
@@ -59,7 +59,7 @@ public class PojoTest extends MyTestCase {
         ujb.setP2(o2);
         ujb.setP3(o3);
         ujb.setP4(o4);
-        
+
         assertEquals(o0, ujb.getP0());
         assertEquals(o1, ujb.getP1());
         assertEquals(o2, ujb.getP2());
@@ -71,23 +71,23 @@ public class PojoTest extends MyTestCase {
         assertEquals(o3, ujb.getP3());
         assertEquals(o4, ujb.getP4());
     }
-    
+
     public void testSpeedTime() throws Throwable {
-        System.out.println("P1:testSpeedTime: " + suite().toString());
-        
-        Long    o0 = new Long(Long.MAX_VALUE);
-        Integer o1 = new Integer(1);
+        System.out.println("P1:testSpeedTime: " + suite());
+
+        Long    o0 = Long.valueOf(Long.MAX_VALUE);
+        Integer o1 = Integer.valueOf(1);
         String  o2 ="TEST";
         Date    o3 = new Date();
         Float   o4 = new Float(123456.456);
         Object result;
-        
+
         callGC();
         long time1 = System.currentTimeMillis();
-        
+
         for (int i=getTimeLoopCount()-1; i>=0; i--) {
             PojoImpl ujb = new PojoImpl();
-            
+
             ujb.setP0(o0);
             ujb.setP1(o1);
             ujb.setP2(o2);
@@ -98,7 +98,7 @@ public class PojoTest extends MyTestCase {
             ujb.setP2(o2);
             ujb.setP3(o3);
             ujb.setP4(o4);
-            
+
             assertEquals(o0, ujb.getP0());
             assertEquals(o1, ujb.getP1());
             assertEquals(o2, ujb.getP2());
@@ -111,26 +111,26 @@ public class PojoTest extends MyTestCase {
             assertEquals(o4, ujb.getP4());
         }
         long time2 = System.currentTimeMillis();
-        
+
         System.out.println("P1:TIME: " + (time2-time1)/1000f + " [sec]");
     }
-    
+
     public void testSpeedTime2() throws Throwable {
-        System.out.println("P2:testSpeedTime (child): " + suite().toString());
-        
-        Long    o0 = new Long(Long.MAX_VALUE);
-        Integer o1 = new Integer(1);
+        System.out.println("P2:testSpeedTime (child): " + suite());
+
+        Long    o0 = Long.valueOf(Long.MAX_VALUE);
+        Integer o1 = Integer.valueOf(1);
         String  o2 ="TEST";
         Date    o3 = new Date();
         Float   o4 = new Float(123456.456);
         Object result;
-        
+
         callGC();
         long time1 = System.currentTimeMillis();
-        
+
         for (int i=getTimeLoopCount()-1; i>=0; i--) {
             PojoImplChild ujb = new PojoImplChild();
-            
+
             ujb.setP0(o0);
             ujb.setP1(o1);
             ujb.setP2(o2);
@@ -141,7 +141,7 @@ public class PojoTest extends MyTestCase {
             ujb.setP7(o2);
             ujb.setP8(o3);
             ujb.setP9(o4);
-            
+
             assertEquals(o0, ujb.getP0());
             assertEquals(o1, ujb.getP1());
             assertEquals(o2, ujb.getP2());
@@ -154,12 +154,12 @@ public class PojoTest extends MyTestCase {
             assertEquals(o4, ujb.getP9());
         }
         long time2 = System.currentTimeMillis();
-        
+
         System.out.println("P2:TIME: " + (time2-time1)/1000f + " [sec]");
-    }    
-    
+    }
+
     public static void main(java.lang.String[] argList) {
         junit.textui.TestRunner.run(suite());
     }
-    
+
 }
