@@ -20,19 +20,19 @@ import org.ujorm.implementation.field.FieldUjoImplChild;
  * @author Pavel Ponec
  */
 public class FieldTree extends FieldUjoImplChild {
-    
+
     private List<FieldTree> children;
-    
+
     /** (List) */
     public static final FieldPropertyList<FieldTree,FieldTree> PRO_CHILDREN = newListKey("CHILDREN", new ValueAgent<FieldTree,List<FieldTree>>() {
         public void writeValue(FieldTree ujo, List<FieldTree> value) {
-            ujo.children = value; 
+            ujo.children = value;
         }
         public List<FieldTree> readValue(FieldTree ujo) {
-            return ujo.children; 
+            return ujo.children;
         }
     });
-    
+
     public void setChilds(List<FieldTree> children) {
         this.children = children;
     }
@@ -43,9 +43,9 @@ public class FieldTree extends FieldUjoImplChild {
     public List<FieldTree> addChild(FieldTree child) {
         getChilds().add(child);
         return getChilds();
-    }    
-    
-    
+    }
+
+
     public int size() {
         int result = 0;
         for (FieldTree tree : PRO_CHILDREN.getList(this)) {
@@ -53,18 +53,18 @@ public class FieldTree extends FieldUjoImplChild {
         }
         return result;
     }
-    
-    
+
+
     // * * * * * * * * * * *
-    
+
     public void init(ZCounter counter, int deep) {
-        
-        Long    o0 = new Long(Long.MAX_VALUE);
-        Integer o1 = new Integer(1);
+
+        Long    o0 = Long.valueOf(Long.MAX_VALUE);
+        Integer o1 = Integer.valueOf(1);
         String  o2 ="TEST";
         Date    o3 = new Date();
         Float   o4 = new Float(123456.456);
-        
+
         PRO_P0.setValue(this, o0);
         PRO_P1.setValue(this, o1);
         PRO_P2.setValue(this, o2);
@@ -75,7 +75,7 @@ public class FieldTree extends FieldUjoImplChild {
         PRO_P7.setValue(this, o2);
         PRO_P8.setValue(this, o3);
         PRO_P9.setValue(this, o4);
-        
+
         for (int i=0; i<10; i++) {
             if (deep<=0 || counter.substract()){
                 return;
@@ -84,10 +84,10 @@ public class FieldTree extends FieldUjoImplChild {
             item.init(counter, deep-1);
             PRO_CHILDREN.addItem(this, item);
         }
-        
+
     }
-    
-    
+
+
 }
 
 
